@@ -1,4 +1,5 @@
-﻿using Microsoft.AspNetCore.Mvc;
+﻿using System;
+using Microsoft.AspNetCore.Mvc;
 using SmartPlate.API.Core.Interfaces;
 using SmartPlate.API.Dto.StolenCars;
 using System.Threading.Tasks;
@@ -17,6 +18,11 @@ namespace SmartPlate.API.Controllers
            
         }
 
+        /// <summary>
+        /// Report a car is stolen
+        /// </summary>
+        /// <param name="stolenCarForCreationDto">Report object that has information</param>
+        /// <returns></returns>
         [HttpPost]
         public async Task<IActionResult> AddNewStolenCar(StolenCarForCreationDto stolenCarForCreationDto)
         {
@@ -31,6 +37,38 @@ namespace SmartPlate.API.Controllers
             return Ok(result);
         }
 
+        /// <summary>
+        /// Report trying to steal the car plate
+        /// </summary>
+        /// <param name="carId">Car id</param>
+        /// <returns></returns>
+        [HttpPost("plate/{carId}")]
+        public async Task<IActionResult> PlateHasStolen(int carId)
+        {
+
+            var model = new StolenCarForCreationDto
+            {
+                CarId = carId,
+                CarOrPlateIsStoled = 1,
+                DateStoled = DateTime.Now,
+                LastLocation = "Your Last Parking",
+                Latitude = 0,
+                Longitude = 0
+            };
+
+            var result = await _stolenCarsRepository.AddNewStolenCar(model);
+
+            if (!result.Success)
+                return BadRequest(new {result.ErrorMessage});
+
+            return Ok(result);
+        }
+
+        /// <summary>
+        /// Check if a car has reported stolen or not
+        /// </summary>
+        /// <param name="carId">Car id</param>
+        /// <returns></returns>
         [HttpGet("{carId}")]
         public async Task<IActionResult> CheckForStolenCar(int carId)
         {
