@@ -8,16 +8,12 @@ namespace SmartPlate.API.Dto.StolenCars
         [Required]
         public int CarId { get; set; }
 
-        [Required]
         public string LastLocation { get; set; }
 
-        [Required]
         public double Longitude { get; set; }
 
-        [Required]
         public double Latitude { get; set; }
 
-        [Required]
         public DateTime DateStoled { get; set; }
 
         /// <summary>
