@@ -1,5 +1,4 @@
-﻿using System;
-using Microsoft.AspNetCore.Http;
+﻿using Microsoft.AspNetCore.Http;
 
 namespace SmartPlate.API.Extensions
 {
@@ -12,21 +11,6 @@ namespace SmartPlate.API.Extensions
             response.Headers.Add("Access-Control-Allow-Origin", "*");
         }
 
-        public static int GetAge(this DateTime date)
-        {
-            return DateTime.Now.Year - date.Year;
-        }
-
-        public static DateTime GetCarEndDate(this DateTime date)
-        {
-            return date.AddYears(10);
-        }
-
-        //Check for if license end date is bigger than today.
-        public static bool IsVaild(this DateTime date)
-        {
-            return date > DateTime.Now;
-        }
 
         public static string CheckStoledObject(this byte obj)
         {
